javascript code fixed

--- a/g00345908/currency-convertor.html
+++ b/g00345908/currency-convertor.html
@@ -19,7 +19,7 @@
 
 			<p>Amount: </p><input type="text" name="value1" id="value1"><br>
 
-			<button class="button" onclick="euroToPounds()">Convert</button>
+			<button class="button" onclick="euroToPounds()">convert</button>
 
 			<p id="resultsentence"></p>
         </div>
