euro to dollar button

--- a/g00345908/currency-convertor.html
+++ b/g00345908/currency-convertor.html
@@ -18,8 +18,12 @@
 			<p>Please input a monetary value.</p>
 
 			<p>Amount: </p><input type="text" name="value1" id="value1"><br>
-
-			<button class="button" onclick="euroToPounds()">convert</button>
+			
+			<button class="button" onclick="euroToPounds()">pounds</button>
+			<button class="button" onclick="euroToDollar()">US Dollar</button>
+			<button class="button" onclick="euroToYen()">Yen</button>
+			<button class="button" onclick="euroToBitcoin()">Bitcoin</button>
+			
 
 			<p id="resultsentence"></p>
         </div>
